# bequation_unit_test

./: .gitignore  CMakeLists.txt  README.md  expression.cpp  expression.h  main.cpp  operator.cpp  operator.h
src/: CMakeLists.txt  expression.cpp  expression.h  expressionparser.cpp  expressionparser.h  main.cpp
test/: CMakeLists.txt  expressiontest.cpp  expressiontest.h  mockexpression.h  testrun.cpp
